--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ hr {
 	
 }
 .header-content.version_2{
-	background-image: url(./img/29493.jpg);
+	background-image: url(../img/29493.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
